[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
random_word = "0.3.0"
clap = "4.1.8"
diesel = { version = "2.0.0", features = ["sqlite"] }
