[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = [
  "runtime-async-std-native-tls",
  "sqlite",
] }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
