[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6.2", features = [
  "postgres",
  "offline",
  "runtime-async-std-native-tls",
] }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
dotenv = "0.15.0"
